Fix collapsing header

--- a/app/assets/stylesheets/layout/common/_header.scss
+++ b/app/assets/stylesheets/layout/common/_header.scss
@@ -1,7 +1,7 @@
 .l-header {
   position: relative;
   background: $color-green-primary;
-  min-height: $baseline-unit*11;
+  min-height: $baseline-unit*12;
 
   .mobile-nav {
     display: none;
